Added polish localization and general localization support

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -238,3 +238,6 @@ DefaultBaseSoundMix=/Game/Games/SoundEffects/SFX_MIX.SFX_MIX
 [/Script/UnrealEd.CookerSettings]
 BlueprintComponentDataCookingMethod=AllBlueprints
 
+[Internationalization]
++LocalizationPaths=%GAMEDIR%Content/Localization/Launcher
+
