--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -12,7 +12,7 @@ bUseBorderlessWindow=False
 ProjectVersion=0.0.0.4.0
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-Build=Always
+Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
 FullRebuild=False
@@ -56,6 +56,7 @@ IncludeCrashReporter=True
 InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
++CulturesToStage=pl-PL
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=False
