re-enabled using pak file for better compression

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -21,7 +21,7 @@ IncludeDebugFiles=True
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
-UsePakFile=False
+UsePakFile=True
 bUseIoStore=False
 bUseZenStore=False
 bMakeBinaryConfig=False
