improved localization in MainLauncher Widget and uploaded translation to CrowdIn

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -53,7 +53,7 @@ bDeterministicShaderCodeOrder=False
 bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=True
-InternationalizationPreset=English
+InternationalizationPreset=All
 -CulturesToStage=en
 +CulturesToStage=en
 +CulturesToStage=pl-PL
@@ -103,4 +103,7 @@ bSkipMovies=True
 
 [/Script/Engine.AssetManagerSettings]
 bOnlyCookProductionAssets=True
+
+[Internationalization]
++LocalizationPaths=%GAMEDIR%Content/Localization/Launcher
 
