commit for version 0.5.1:
- improved packaging settings by tweaking compression and also atting PakBlacklist-Shipping file
- Tweaked images texturegroup for UI
- disabled unnecessary plugins
- Turned off world rendering to save gpu power

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ CompanyDistinguishedName=DashoGames
 Homepage="https://shieldowskyy.pl/"
 SupportContact=shieldowskyy@protonmail.com
 bUseBorderlessWindow=False
-ProjectVersion=0.0.0.4.0
+ProjectVersion=0.5.1
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
@@ -17,7 +17,7 @@ BuildConfiguration=PPBC_Shipping
 BuildTarget=
 FullRebuild=False
 ForDistribution=True
-IncludeDebugFiles=True
+IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
@@ -37,7 +37,7 @@ bCompressed=True
 PackageCompressionFormat=Oodle
 bForceUseProjectCompressionFormatIgnoreHardwareOverride=True
 PackageAdditionalCompressionOptions=
-PackageCompressionMethod=Kraken
+PackageCompressionMethod=Leviathan
 PackageCompressionLevel_DebugDevelopment=5
 PackageCompressionLevel_TestShipping=7
 PackageCompressionLevel_Distribution=12
@@ -46,9 +46,9 @@ PackageCompressionMinPercentSaved=5
 bPackageCompressionEnableDDC=True
 PackageCompressionMinSizeToConsiderDDC=0
 HttpChunkInstallDataVersion=
-IncludePrerequisites=False
-IncludeAppLocalPrerequisites=False
-bShareMaterialShaderCode=False
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=True
+bShareMaterialShaderCode=True
 bDeterministicShaderCodeOrder=False
 bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
@@ -100,6 +100,7 @@ bSkipMovies=True
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
++MapsToCook=(FilePath="/Game/launchermap")
 
 [/Script/Engine.AssetManagerSettings]
 bOnlyCookProductionAssets=True
