--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,11 @@ jobs:
         PAK: false
         SERVER: false
         ARCHIVE: false
-        ARCHIVE_PATH: 'Archives/PiozaGL/'
+        ARCHIVE_PATH: 'C:/Archives/PiozaGL/'
         NULLRHI: true
         EDITOR: true
         ENCRYPT_INI: true
         RELEASE: '1.0.0'
         PATCH: '0.9.0'
-        MAPS: 'Map1,Map2'
+        MAPS: 'launchermap'
         DELETE_PDB: true
