--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       uses: OrchidIsle/UE5-Build-Project@latest
       with:
         RUNUAT_PATH: 'C:/Unreal Engine/UE5.3_Source/Engine/Build/BatchFiles/RunUAT.bat'
-        UPROJECT_PATH: PiozaGameLauncher.uproject
+        UPROJECT_PATH: ${{ github.workspace }}/PiozaGameLauncher.uproject
         BUILD_CONFIG: Development
         PLATFORM: Win64
         CLEAN: true
