- Fixed audio mute option - Added "custom game executable file not found" error detection - Fixed bug that caused Play button to be not accessible after exiting a game - Cleaned up mess in AddGameWizard by transforming AutoFill to Function

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -233,7 +233,9 @@ s.AsyncLoadingUseFullTimeLimit=True
 gc.MultithreadedDestructionEnabled=False
 
 [/Script/Engine.AudioSettings]
-DefaultBaseSoundMix=/Game/Games/SoundEffects/SFX_MIX.SFX_MIX
+DefaultBaseSoundMix=/Game/Media/SFX_MIX.SFX_MIX
+DefaultSoundClassName=/Game/Media/SC_SFX.SC_SFX
+DefaultMediaSoundClassName=/Game/Media/SC_SFX.SC_SFX
 
 [/Script/UnrealEd.CookerSettings]
 BlueprintComponentDataCookingMethod=AllBlueprints
