- Added price tag that is replaced to local version if game is on disk

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -165,7 +165,7 @@ r.SkinCache.SkipCompilingGPUSkinVF=False
 r.SkinCache.DefaultBehavior=1
 r.SkinCache.SceneMemoryLimitInMB=128.000000
 r.Mobile.EnableStaticAndCSMShadowReceivers=False
-r.Mobile.EnableMovableLightCSMShaderCulling=True
+r.Mobile.EnableMovableLightCSMShaderCulling=False
 r.Mobile.Forward.EnableLocalLights=True
 r.Mobile.Forward.EnableClusteredReflections=False
 r.Mobile.EnableNoPrecomputedLightingCSMShader=False
@@ -182,7 +182,7 @@ r.GPUSkin.UnlimitedBoneInfluencesThreshold=8
 DefaultBoneInfluenceLimit=(Default=0,PerPlatform=())
 MaxSkinBones=(Default=65536,PerPlatform=(("Mobile", 256)))
 r.Mobile.PlanarReflectionMode=0
-r.Mobile.SupportsGen4TAA=True
+r.Mobile.SupportsGen4TAA=False
 bStreamSkeletalMeshLODs=(Default=False,PerPlatform=())
 bDiscardSkeletalMeshOptionalLODs=(Default=False,PerPlatform=())
 VisualizeCalibrationColorMaterialPath=/Engine/EngineMaterials/PPM_DefaultCalibrationColor.PPM_DefaultCalibrationColor
