- Simplified changelog downloading and manifest gathering code - Added check for manifest support version - Fixed UI glitchez

--- a/PiozaGameLauncher.uproject
+++ b/PiozaGameLauncher.uproject
@@ -510,6 +510,10 @@
 		{
 			"Name": "CustomMeshComponent",
 			"Enabled": false
+		},
+		{
+			"Name": "SQLiteSupport",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
