- Added video player in screenshot menu - Fixed screenshots menu size - Updated Games Manifest

--- a/PiozaGameLauncher.uproject
+++ b/PiozaGameLauncher.uproject
@@ -514,6 +514,10 @@
 		{
 			"Name": "SQLiteSupport",
 			"Enabled": true
+		},
+		{
+			"Name": "WebBrowserWidget",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
