- Updated build config

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -14,7 +14,7 @@ ProjectVersion=0.5.1
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
-BuildTarget=
+BuildTarget=PiozaGameLauncher
 FullRebuild=False
 ForDistribution=True
 IncludeDebugFiles=False
@@ -33,6 +33,7 @@ MaxChunkSize=0
 bBuildHttpChunkInstallData=False
 HttpChunkInstallDataDirectory=(Path="")
 WriteBackMetadataToAssetRegistry=Disabled
+bWritePluginSizeSummaryJsons=False
 bCompressed=True
 PackageCompressionFormat=Oodle
 bForceUseProjectCompressionFormatIgnoreHardwareOverride=True
@@ -60,10 +61,13 @@ InternationalizationPreset=All
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=False
+bTreatWarningsAsErrorsOnCook=False
 bSkipEditorContent=True
 bSkipMovies=True
 -IniKeyDenylist=KeyStorePassword
 -IniKeyDenylist=KeyPassword
+-IniKeyDenylist=DebugKeyStorePassword
+-IniKeyDenylist=DebugKeyPassword
 -IniKeyDenylist=rsa.privateexp
 -IniKeyDenylist=rsa.modulus
 -IniKeyDenylist=rsa.publicexp
@@ -79,6 +83,8 @@ bSkipMovies=True
 -IniKeyDenylist=MobileProvision
 -IniKeyDenylist=IniKeyDenylist
 -IniKeyDenylist=IniSectionDenylist
++IniKeyDenylist=DebugKeyStorePassword
++IniKeyDenylist=DebugKeyPassword
 +IniKeyDenylist=KeyStorePassword
 +IniKeyDenylist=KeyPassword
 +IniKeyDenylist=rsa.privateexp
@@ -98,9 +104,14 @@ bSkipMovies=True
 +IniKeyDenylist=IniSectionDenylist
 -IniSectionDenylist=HordeStorageServers
 -IniSectionDenylist=StorageServers
+-IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
++IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/launchermap")
++DirectoriesToNeverCook=(Path="/Game/Data")
+bRetainStagedDirectory=False
+CustomStageCopyHandler=
 
 [/Script/Engine.AssetManagerSettings]
 bOnlyCookProductionAssets=True
