- Filled copyright notice and description info - Fixed bugs with plugin Easy File Dialog

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,16 +6,18 @@ ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "6CB43B884AB1B9118FE
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "09D7CB6D4FE58C34623EBBB9153E29D3", "PiozaGameLauncherDEV")
 CompanyName=Shieldziak
 CompanyDistinguishedName=DashoGames
-Homepage="https://shieldowskyy.pl/"
+Homepage="https://github.com/Shieldowskyy/PiozaGameLauncher"
 SupportContact=shieldowskyy@protonmail.com
 bUseBorderlessWindow=False
-ProjectVersion=0.5.1
+ProjectVersion=0.6.0
+CopyrightNotice=Created by Shieldziak for DashoGames <3
+Description=An open source game launcher for Dasho Games titles and more!
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=PiozaGameLauncher
-FullRebuild=False
+FullRebuild=True
 ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
