- Added fallback font for Inter - Improved resolution and fullscreen setting when launching for first time - Moved and excluded PiozaPrelude music files - Disabled even more unused plugins - Improved audio encoding packaging options

--- a/Config/DefaultDeviceProfiles.ini
+++ b/Config/DefaultDeviceProfiles.ini
@@ -2,9 +2,13 @@
 DeviceType=Windows
 BaseProfileName=
 bIsVisibleForAssets=True
+-CVars=UI.SlateSDFText.RasterizationMode=Msdf
+-CVars=UI.SlateSDFText.ResolutionLevel=2
++CVars=UI.SlateSDFText.RasterizationMode=Msdf
++CVars=UI.SlateSDFText.ResolutionLevel=3
 +CVars=sg.TextureQuality=0
 +CVars=sg.ShadowQuality=0
-+CVars=sg.ResolutionQuality=10
++CVars=sg.ResolutionQuality=2
 +CVars=sg.EffectsQuality=0
 +CVars=sg.AntiAliasingQuality=0
 +CVars=sg.GlobalIlluminationQuality=0
@@ -14,10 +18,11 @@ bIsVisibleForAssets=True
 +CVars=sg.FoliageQuality=0
 +CVars=sg.ViewDistanceQuality=0
 +CVars=r.AntiAliasingMethod=0
++CVars=r.FullScreenMode=2
++CVars=r.SetRes=960x540w
 
 [WindowsClient DeviceProfile]
 DeviceType=Windows
 BaseProfileName=Windows
 bIsVisibleForAssets=False
-+CVars=r.SetRes=1280x720w
 
