--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -231,11 +231,13 @@ s.AsyncLoadingUseFullTimeLimit=True
 
 [/Script/Engine.GarbageCollectionSettings]
 gc.MultithreadedDestructionEnabled=False
+gc.AssetClustreringEnabled=True
 
 [/Script/Engine.AudioSettings]
 DefaultBaseSoundMix=/Game/Media/SFX_MIX.SFX_MIX
 DefaultSoundClassName=/Game/Media/SC_SFX.SC_SFX
 DefaultMediaSoundClassName=/Game/Media/SC_SFX.SC_SFX
+DefaultAudioCompressionType=Opus
 
 [/Script/UnrealEd.CookerSettings]
 BlueprintComponentDataCookingMethod=AllBlueprints
