--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -17,17 +17,17 @@ Description=An open source game launcher for Dasho Games titles and more!
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=PiozaGameLauncher
-FullRebuild=True
+FullRebuild=False
 ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
-bUseIoStore=False
+bUseIoStore=True
 bUseZenStore=False
-bMakeBinaryConfig=False
-bGenerateChunks=False
+bMakeBinaryConfig=True
+bGenerateChunks=True
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
 bForceOneChunkPerFile=False
@@ -112,6 +112,10 @@ bSkipMovies=True
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/launchermap")
 +DirectoriesToNeverCook=(Path="/Game/Data")
++DirectoriesToNeverCook=(Path="/Game/Media/Music")
++DirectoriesToNeverCook=(Path="/Engine/VREditor/")
++DirectoriesToNeverCook=(Path="/Engine/EditorLandscapeResources")
++DirectoriesToNeverCook=(Path="")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
