- Added volume controll command description and output in console

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -115,7 +115,9 @@ bSkipMovies=True
 +DirectoriesToNeverCook=(Path="/Game/Media/Music")
 +DirectoriesToNeverCook=(Path="/Engine/VREditor/")
 +DirectoriesToNeverCook=(Path="/Engine/EditorLandscapeResources")
-+DirectoriesToNeverCook=(Path="")
++DirectoriesToNeverCook=(Path="/Engine/EditorShapes")
++DirectoriesToNeverCook=(Path="/Engine/BasicShapes")
++DirectoriesToNeverCook=(Path="/Engine/EditorMeshes")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
