- Optimized config - Made Move function more modular - Added list and rmentry commands to console - Replaced Move operation logging to console logging - Code in MainLauncher1 is more readable - Optimized compression settings for packaging

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -12,6 +12,7 @@ bUseBorderlessWindow=False
 ProjectVersion=0.6.0
 CopyrightNotice=Created by Shieldziak for DashoGames <3
 Description=An open source game launcher for Dasho Games titles and more!
+ProjectName=PiozaGameLauncher
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
@@ -40,7 +41,7 @@ bCompressed=True
 PackageCompressionFormat=Oodle
 bForceUseProjectCompressionFormatIgnoreHardwareOverride=True
 PackageAdditionalCompressionOptions=
-PackageCompressionMethod=Leviathan
+PackageCompressionMethod=Mermaid
 PackageCompressionLevel_DebugDevelopment=5
 PackageCompressionLevel_TestShipping=7
 PackageCompressionLevel_Distribution=12
@@ -118,6 +119,11 @@ bSkipMovies=True
 +DirectoriesToNeverCook=(Path="/Engine/EditorShapes")
 +DirectoriesToNeverCook=(Path="/Engine/BasicShapes")
 +DirectoriesToNeverCook=(Path="/Engine/EditorMeshes")
++DirectoriesToNeverCook=(Path="/Engine/ArtTools")
++DirectoriesToNeverCook=(Path="/Engine/EngineSky")
++DirectoriesToNeverCook=(Path="/Engine/MobileResources")
++DirectoriesToNeverCook=(Path="/Engine/EngineDamageTypes")
++DirectoriesToNeverCook=(Path="/MeshModelingToolset")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
