--- a/PiozaGameLauncher.uproject
+++ b/PiozaGameLauncher.uproject
@@ -635,6 +635,14 @@
 			"SupportedTargetPlatforms": [
 				"Win64"
 			]
+		},
+		{
+			"Name": "LocalizableMessage",
+			"Enabled": false
+		},
+		{
+			"Name": "GameplayTagsEditor",
+			"Enabled": false
 		}
 	],
 	"TargetPlatforms": [
