--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,7 +75,7 @@ r.ClearCoatNormal=False
 r.DynamicGlobalIlluminationMethod=0
 r.ReflectionMethod=0
 r.ReflectionCaptureResolution=128
-r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
+r.ReflectionEnvironmentLightmapMixBasedOnRoughness=False
 r.Lumen.HardwareRayTracing=False
 r.Lumen.HardwareRayTracing.LightingMode=0
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
@@ -97,7 +97,7 @@ r.TranslucentSortPolicy=0
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 xr.VRS.FoveationLevel=0
 xr.VRS.DynamicFoveation=False
-r.CustomDepth=1
+r.CustomDepth=2
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
 r.DefaultFeature.Bloom=False
@@ -115,7 +115,7 @@ r.TemporalAA.Upsampling=True
 r.AntiAliasingMethod=0
 r.MSAACount=1
 r.DefaultFeature.LightUnits=1
-r.DefaultBackBufferPixelFormat=4
+r.DefaultBackBufferPixelFormat=0
 r.ScreenPercentage.Default=100.000000
 r.ScreenPercentage.Default.Desktop.Mode=1
 r.ScreenPercentage.Default.Mobile.Mode=0
@@ -123,11 +123,11 @@ r.ScreenPercentage.Default.VR.Mode=0
 r.ScreenPercentage.Default.PathTracer.Mode=0
 r.Shadow.UnbuiltPreviewInGame=False
 r.StencilForLODDither=False
-r.EarlyZPass=3
+r.EarlyZPass=0
 r.EarlyZPassOnlyMaterialMasking=False
 r.Shadow.CSMCaching=False
 r.DBuffer=False
-r.ClearSceneMethod=1
+r.ClearSceneMethod=0
 r.VelocityOutputPass=0
 r.Velocity.EnableVertexDeformation=2
 r.SelectiveBasePassOutputs=False
@@ -135,11 +135,11 @@ bDefaultParticleCutouts=False
 fx.GPUSimulationTextureSizeX=1024
 fx.GPUSimulationTextureSizeY=1024
 r.AllowGlobalClipPlane=False
-r.GBufferFormat=1
+r.GBufferFormat=0
 r.MorphTarget.Mode=False
 r.GPUCrashDebugging=False
 vr.InstancedStereo=False
-r.MobileHDR=True
+r.MobileHDR=False
 vr.MobileMultiView=False
 r.Mobile.UseHWsRGBEncoding=False
 vr.RoundRobinOcclusion=False
@@ -173,7 +173,7 @@ r.Mobile.AllowDistanceFieldShadows=False
 r.Mobile.AllowMovableDirectionalLights=False
 r.Mobile.EnableMovableSpotlightsShadow=False
 r.GPUSkin.Support16BitBoneIndex=False
-r.GPUSkin.Limit2BoneInfluences=False
+r.GPUSkin.Limit2BoneInfluences=True
 r.SupportDepthOnlyIndexBuffers=False
 r.SupportReversedIndexBuffers=False
 r.Mobile.AmbientOcclusion=False
@@ -188,6 +188,14 @@ bDiscardSkeletalMeshOptionalLODs=(Default=False,PerPlatform=())
 VisualizeCalibrationColorMaterialPath=/Engine/EngineMaterials/PPM_DefaultCalibrationColor.PPM_DefaultCalibrationColor
 VisualizeCalibrationCustomMaterialPath=None
 VisualizeCalibrationGrayscaleMaterialPath=/Engine/EngineMaterials/PPM_DefaultCalibrationGrayscale.PPM_DefaultCalibrationGrayscale
+r.SupportLocalFogVolumes=False
+r.VRS.Support=False
+r.VolumetricFog.LightFunction=False
+r.Deferred.UsesLightFunctionAtlas=False
+r.Refraction.Blur=False
+r.HairStrands.LODMode=False
+r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=False
+r.Material.DefaultAutoMaterialUsage=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -238,6 +246,7 @@ DefaultBaseSoundMix=/Game/Media/SFX_MIX.SFX_MIX
 DefaultSoundClassName=/Game/Media/SC_SFX.SC_SFX
 DefaultMediaSoundClassName=/Game/Media/SC_SFX.SC_SFX
 DefaultAudioCompressionType=Opus
+MaximumConcurrentStreams=4
 
 [/Script/UnrealEd.CookerSettings]
 BlueprintComponentDataCookingMethod=AllBlueprints
