--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ CompanyDistinguishedName=DashoGames
 Homepage="https://github.com/Shieldowskyy/PiozaGameLauncher"
 SupportContact=shieldowskyy@protonmail.com
 bUseBorderlessWindow=False
-ProjectVersion=0.6.4
+ProjectVersion=0.6.5
 CopyrightNotice=Created by Shieldziak for DashoGames <3
 Description=An open source game launcher for Dasho Games titles and more!
 ProjectName=PiozaGameLauncher
@@ -124,6 +124,7 @@ bSkipMovies=True
 +DirectoriesToNeverCook=(Path="/Engine/MobileResources")
 +DirectoriesToNeverCook=(Path="/Engine/EngineDamageTypes")
 +DirectoriesToNeverCook=(Path="/MeshModelingToolset")
++DirectoriesToAlwaysStageAsNonUFS=(Path="Scripts")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
