- Excluded more engine entries from packaging dir - Set stagging repo to default for temporary fix

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -124,6 +124,7 @@ bSkipMovies=True
 +DirectoriesToNeverCook=(Path="/Engine/MobileResources")
 +DirectoriesToNeverCook=(Path="/Engine/EngineDamageTypes")
 +DirectoriesToNeverCook=(Path="/MeshModelingToolset")
++DirectoriesToNeverCook=(Path="/Engine/EditorMaterials/Camera")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
