experimental linux implementation of EasyFileDialog
- that's my first time writing code for linux and none of this code was tested on linux

--- a/PiozaGameLauncher.uproject
+++ b/PiozaGameLauncher.uproject
@@ -639,6 +639,11 @@
 		{
 			"Name": "GameplayTagsEditor",
 			"Enabled": false
+		},
+		{
+			"Name": "Fetch",
+			"Enabled": false,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/e8098c9d0b414ad4924296c8a4495668"
 		}
 	],
 	"TargetPlatforms": [
