--- a/Plugins/EasyFileDialog/EasyFileDialog.uplugin
+++ b/Plugins/EasyFileDialog/EasyFileDialog.uplugin
@@ -19,7 +19,8 @@
 			"Type": "Runtime",
 			"LoadingPhase": "PreLoadingScreen",
 			"PlatformAllowList": [
-				"Win64"
+				"Win64",
+				"Linux"
 			]
 		}
 	]
