--- a/PiozaGameLauncher.uproject
+++ b/PiozaGameLauncher.uproject
@@ -97,7 +97,7 @@
 		},
 		{
 			"Name": "FileHelper",
-			"Enabled": false,
+			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/bec5be3d587f4ff49a61d45d0e81e4c0"
 		},
 		{
@@ -371,7 +371,7 @@
 		},
 		{
 			"Name": "EasyFileDialog",
-			"Enabled": false,
+			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/bcf64fe2e00c48189d8385a9c39b6e61"
 		},
 		{
