Reverted back linux changes to EasyFileDialog

--- a/Plugins/EasyFileDialog/EasyFileDialog.uplugin
+++ b/Plugins/EasyFileDialog/EasyFileDialog.uplugin
@@ -19,8 +19,7 @@
 			"Type": "Runtime",
 			"LoadingPhase": "PreLoadingScreen",
 			"PlatformAllowList": [
-				"Win64",
-				"Linux"
+				"Win64"
 			]
 		}
 	]
