--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,17 +2,17 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=05CD3853422855FAF7D2F09C482651BF
-ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "6CB43B884AB1B9118FE19F952E661D4C", "PiozaGameLauncher")
-ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "09D7CB6D4FE58C34623EBBB9153E29D3", "PiozaGameLauncherDEV")
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "6CB43B884AB1B9118FE19F952E661D4C", "Pioza Launcher")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "09D7CB6D4FE58C34623EBBB9153E29D3", "Pioza Launcher (DEBUG)")
 CompanyName=Shieldziak
 CompanyDistinguishedName=DashoGames
-Homepage="https://github.com/Shieldowskyy/PiozaGameLauncher"
+Homepage="https://github.com/Shieldowskyy/PiozaLauncher"
 SupportContact=shieldowskyy@protonmail.com
 bUseBorderlessWindow=False
-ProjectVersion=0.6.6
+ProjectVersion=0.6.7
 CopyrightNotice=Created by Shieldziak for DashoGames <3
 Description=An open source game launcher for Dasho Games titles and more!
-ProjectName=PiozaGameLauncher
+ProjectName=PiozaLauncher
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
