Modular code, plugin and more...
- Moved some parts of code to separate plugin
- Console as plugin and better code organization
- More rebranding work done (app name at the bottom of the UI)
- Cleaned up mess in folders (also removed unused assets)
- Updated reditrectors (which saved many assets unnecessary)

--- a/PiozaGameLauncher.uproject
+++ b/PiozaGameLauncher.uproject
@@ -644,6 +644,10 @@
 			"Name": "Fetch",
 			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/e8098c9d0b414ad4924296c8a4495668"
+		},
+		{
+			"Name": "PiozaNativeFunctions",
+			"Enabled": false
 		}
 	],
 	"TargetPlatforms": [
