Fixes for better linux packaging
 (no crash reporter for testing purposes)

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -25,9 +25,9 @@ BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
-bUseIoStore=True
+bUseIoStore=False
 bUseZenStore=False
-bMakeBinaryConfig=True
+bMakeBinaryConfig=False
 bGenerateChunks=True
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
@@ -50,13 +50,13 @@ PackageCompressionMinPercentSaved=5
 bPackageCompressionEnableDDC=True
 PackageCompressionMinSizeToConsiderDDC=0
 HttpChunkInstallDataVersion=
-IncludePrerequisites=True
-IncludeAppLocalPrerequisites=True
+IncludePrerequisites=False
+IncludeAppLocalPrerequisites=False
 bShareMaterialShaderCode=True
 bDeterministicShaderCodeOrder=False
 bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
-IncludeCrashReporter=True
+IncludeCrashReporter=False
 InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
