--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -376,3 +376,10 @@ BuildToolsOverride=
 bStreamLandscapeMeshLODs=False
 bEnableDomStorage=False
 
+[/Script/LinuxTargetPlatform.LinuxTargetSettings]
+SoundCueCookQualityIndex=0
+SourceDataOverridePlugin=None
+OcclusionPlugin=Built-in Occlusion
+ReverbPlugin=Built-in Reverb
+SpatializationPlugin=Built-in Spatialization
+
