--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -16,10 +16,10 @@ ProjectName=PiozaLauncher
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Shipping
+BuildConfiguration=PPBC_Development
 BuildTarget=PiozaGameLauncher
 FullRebuild=False
-ForDistribution=True
+ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
@@ -42,7 +42,7 @@ PackageCompressionFormat=Oodle
 bForceUseProjectCompressionFormatIgnoreHardwareOverride=True
 PackageAdditionalCompressionOptions=
 PackageCompressionMethod=Mermaid
-PackageCompressionLevel_DebugDevelopment=5
+PackageCompressionLevel_DebugDevelopment=1
 PackageCompressionLevel_TestShipping=7
 PackageCompressionLevel_Distribution=12
 PackageCompressionMinBytesSaved=1024
@@ -56,7 +56,7 @@ bShareMaterialShaderCode=True
 bDeterministicShaderCodeOrder=False
 bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
-IncludeCrashReporter=False
+IncludeCrashReporter=True
 InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
