Reimplemented web browser
CAUTION! IT MUST BE COMPILED ON TARGET PLATFORM TO WORK PROPERLY!

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -16,10 +16,10 @@ ProjectName=PiozaLauncher
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=PiozaGameLauncher
 FullRebuild=False
-ForDistribution=False
+ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
