--- a/PiozaGameLauncher.uproject
+++ b/PiozaGameLauncher.uproject
@@ -640,6 +640,10 @@
 		{
 			"Name": "PiozaNativeFunctions",
 			"Enabled": false
+		},
+		{
+			"Name": "WebBrowserWidget",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
