Implemented very basic themes system
- Disabled background level streaming and AsyncLoadingThread
- Added 3 basic themes: Default, Light, RoseQuartz

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -201,7 +201,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
 [/Script/Engine.UserInterfaceSettings]
 bAuthorizeAutomaticWidgetVariableCreation=False
-FontDPIPreset=Standard
+FontDPIPreset=Unreal
 FontDPI=72
 
 [/Script/Engine.Engine]
@@ -232,8 +232,8 @@ AutomaticBreadcrumbs=(bOnMapLoadingStarted=True,bOnMapLoaded=True,bOnGameStateCl
 SendDefaultPii=True
 
 [/Script/Engine.StreamingSettings]
-s.UseBackgroundLevelStreaming=True
-s.AsyncLoadingThreadEnabled=True
+s.UseBackgroundLevelStreaming=False
+s.AsyncLoadingThreadEnabled=False
 s.AsyncLoadingUseFullTimeLimit=True
 
 [/Script/Engine.GarbageCollectionSettings]
@@ -382,4 +382,9 @@ SourceDataOverridePlugin=None
 OcclusionPlugin=Built-in Occlusion
 ReverbPlugin=Built-in Reverb
 SpatializationPlugin=Built-in Spatialization
+
+[/Script/Engine.PhysicsSettings]
+bDisableActiveActors=True
+bDisableKinematicStaticPairs=True
+bDisableKinematicKinematicPairs=True
 
