--- a/.github/workflows/build-appimage.yml
+++ b/.github/workflows/build-appimage.yml
@@ -48,7 +48,7 @@ jobs:
           ./appimagetool-x86_64.AppImage --appimage-extract
           chmod +x squashfs-root/AppRun
           ARCH=x86_64 ./squashfs-root/AppRun Build/Linux/AppImage/PiozaLauncher.AppDir
-          mv Pioza_Launcher-x86_64.AppImage "PiozaLauncher-v$VERSION_NO_V-x86_64.AppImage"
+          mv Pioza_Launcher-*.AppImage "PiozaLauncher-v$VERSION_NO_V-x86_64.AppImage"
 
       - name: Upload AppImage artifact
         uses: actions/upload-artifact@v4
