--- a/.github/workflows/build-appimage.yml
+++ b/.github/workflows/build-appimage.yml
@@ -43,12 +43,14 @@ jobs:
         run: |
           find . -type f -name "*.so" -exec sh -c 'strip --strip-unneeded "$1" 2>/dev/null || true' sh {} \;
 
+
       - name: Extract and use appimagetool without FUSE
         run: |
           ./appimagetool-x86_64.AppImage --appimage-extract
           chmod +x squashfs-root/AppRun
           ARCH=x86_64 ./squashfs-root/AppRun Build/Linux/AppImage/PiozaLauncher.AppDir
-          mv Pioza_Launcher-*.AppImage "PiozaLauncher-v$VERSION_NO_V-x86_64.AppImage"
+          APPIMAGE_PATH=$(ls Pioza_Launcher-*-x86_64.AppImage)
+          mv "$APPIMAGE_PATH" "PiozaLauncher-v$VERSION_NO_V-x86_64.AppImage"
 
       - name: Upload AppImage artifact
         uses: actions/upload-artifact@v4
