--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = Plugins/RuntimeAudioImporter
 	url = https://github.com/gtreshchev/RuntimeAudioImporter.git
 	branch = 3147450
+[submodule "Plugins/DSHConsole"]
+	path = Plugins/DSHConsole
+	url = https://github.com/Shieldowskyy/DSHConsole
