Disabled features + version bump + wine fix

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -16,11 +16,11 @@ ProjectName=PiozaLauncher
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Shipping
+BuildConfiguration=PPBC_DebugGame
 BuildTarget=PiozaGameLauncher
-FullRebuild=False
-ForDistribution=True
-IncludeDebugFiles=False
+FullRebuild=True
+ForDistribution=False
+IncludeDebugFiles=True
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
