fixes and better code + error sfx
- Replaced old JSON Parsing method with new improved one
- added error sound
- fixed ls command
- fixed lack of locking while uninstalling game
- removed manifests array (replaced with single var)
- fixed bug in listdirectory function
- added structutils as dependency in build.cs

--- a/PiozaGameLauncher.uproject
+++ b/PiozaGameLauncher.uproject
@@ -635,6 +635,10 @@
 		{
 			"Name": "WebBrowserWidget",
 			"Enabled": true
+		},
+		{
+			"Name": "StructUtils",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
