--- a/Plugins/Sentry/Sentry.uplugin
+++ b/Plugins/Sentry/Sentry.uplugin
@@ -20,13 +20,13 @@
 			"Name": "Sentry",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
-			"WhitelistPlatforms": [ "Win64", "Mac", "Android", "IOS", "Linux", "LinuxArm64" ]
+			"WhitelistPlatforms": [ "Win64", "Mac", "Android", "IOS" ]
 		},
 		{
 			"Name": "SentryEditor",
 			"Type": "Editor",
 			"LoadingPhase": "Default",
-			"WhitelistPlatforms": [ "Win64", "Mac", "Android", "IOS", "Linux", "LinuxArm64" ]
+			"WhitelistPlatforms": [ "Win64", "Mac", "Android", "IOS" ]
 		}
 	],
 	"PostBuildSteps":
