Updated localization and improved gui scaling

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -58,9 +58,10 @@ bDeterministicShaderCodeOrder=False
 bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=True
-InternationalizationPreset=English
+InternationalizationPreset=All
 -CulturesToStage=en
 +CulturesToStage=en
++CulturesToStage=pl
 +CulturesToStage=pl-PL
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
