--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Cook, Stage & Package UE Project
       uses: OrchidIsle/UE5-Build-Project@latest
       with:
-        RUNUAT_PATH: 'C:/Unreal Engine/UE5.3_Source/Engine/Build/BatchFiles/RunUAT.bat'
+        RUNUAT_PATH: 'C:/Unreal Engine/UE5.5_Source/Engine/Build/BatchFiles/RunUAT.bat'
         UPROJECT_PATH: ${{ github.workspace }}/PiozaGameLauncher.uproject
         BUILD_CONFIG: Development
         PLATFORM: Win64
@@ -34,7 +34,7 @@ jobs:
         ARCHIVE_PATH: 'C:/Archives/PiozaGL/'
         NULLRHI: true
         EDITOR: true
-        ENCRYPT_INI: true
+        ENCRYPT_INI: false
         RELEASE: '1.0.0'
         PATCH: '0.9.0'
         MAPS: 'launchermap'
