--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -1,18 +1,21 @@
 name: Build RPM
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to build'
+        required: true
+        default: '0.7.2'
 
 jobs:
   build_rpm:
     runs-on: ubuntu-latest
 
     env:
-      VERSION: "0.7.2"
+      NAME: pioza-launcher
       DATE: ${{ github.event.head_commit.timestamp }}
-      NAME: "pioza-launcher"
+      VERSION: ${{ github.event.inputs.version }}
 
     steps:
     - name: Checkout repo
@@ -24,9 +27,8 @@ jobs:
     - name: Prepare sources directory
       run: |
         mkdir -p rpm_build/SOURCES
-        # Zip just the Linux folder from Build/Linux/AppImage/PiozaLauncher.AppDir/
         cd Build/Linux/AppImage/PiozaLauncher.AppDir
-        zip -r ../../../../rpm_build/SOURCES/${{ env.NAME }}-${{ env.VERSION }}.zip Linux
+        zip -r ../../../../rpm_build/SOURCES/${NAME}-${VERSION}.zip Linux
 
     - name: Prepare specs directory
       run: mkdir -p rpm_build/SPECS
@@ -34,7 +36,7 @@ jobs:
     - name: Copy spec file and replace variables
       run: |
         sed \
-          -e "s/%{version}/${{ env.VERSION }}/g" \
+          -e "s/%{version}/${VERSION}/g" \
           -e "s/%{date}/$(date +'%a %b %d %Y')/g" \
           Build/Linux/rpm/PiozaLauncher.spec > rpm_build/SPECS/PiozaLauncher.spec
 
