--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -4,9 +4,13 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version to build'
+        description: 'Version tag (e.g., v0.7.2)'
         required: true
-        default: '0.7.2'
+        default: 'v0.7.2'
+      zip_url:
+        description: 'URL to ZIP archive containing Linux folder'
+        required: true
+        default: 'https://example.com/PiozaLauncher-linux.zip'
 
 jobs:
   build_rpm:
@@ -15,35 +19,42 @@ jobs:
     env:
       NAME: pioza-launcher
       DATE: ${{ github.event.head_commit.timestamp }}
-      VERSION: ${{ github.event.inputs.version }}
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+    - name: Install required packages
+      run: sudo apt-get update && sudo apt-get install -y rpm unzip python3 zenity tar vulkan-utils
 
-    - name: Install RPM tools and unzip
-      run: sudo apt-get update && sudo apt-get install -y rpm build-essential unzip python3 zenity tar vulkan-utils
+    - name: Download ZIP archive
+      run: |
+        curl -L "${{ github.event.inputs.zip_url }}" -o source.zip
 
-    - name: Prepare sources directory
+    - name: Unpack ZIP archive
+      run: |
+        unzip source.zip -d source_unpacked
+
+    - name: Prepare RPM build tree
       run: |
         mkdir -p rpm_build/SOURCES
-        cd Build/Linux/AppImage/PiozaLauncher.AppDir
-        zip -r ../../../../rpm_build/SOURCES/${NAME}-${VERSION}.zip Linux
+        mkdir -p rpm_build/SPECS
 
-    - name: Prepare specs directory
-      run: mkdir -p rpm_build/SPECS
+    - name: Create source ZIP for RPM
+      run: |
+        # Zip just the Linux folder inside unpacked source into SOURCES
+        cd source_unpacked
+        zip -r "../rpm_build/SOURCES/${NAME}-${{ github.event.inputs.version }}.zip" Linux
+        cd ..
 
-    - name: Copy spec file and replace variables
+    - name: Copy and prepare SPEC file
       run: |
         sed \
-          -e "s/%{version}/${VERSION}/g" \
+          -e "s/%{version}/${{ github.event.inputs.version }}/g" \
           -e "s/%{date}/$(date +'%a %b %d %Y')/g" \
           Build/Linux/rpm/PiozaLauncher.spec > rpm_build/SPECS/PiozaLauncher.spec
 
-    - name: Build RPM
+    - name: Build RPM package
       run: rpmbuild --define "_topdir $PWD/rpm_build" -ba rpm_build/SPECS/PiozaLauncher.spec
 
-    - name: Upload RPM
+    - name: Upload RPM artifact
       uses: actions/upload-artifact@v3
       with:
         name: pioza-launcher-rpm
