--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -21,6 +21,9 @@ jobs:
       DATE: ${{ github.event.head_commit.timestamp }}
 
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
     - name: Install required packages
       run: sudo apt-get update && sudo apt-get install -y rpm unzip python3 zenity tar
 
