--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install required packages
-      run: sudo apt-get update && sudo apt-get install -y rpm unzip python3 zenity tar
+      run: sudo apt-get update && sudo apt-get install -y rpm unzip python3 zenity tar zip
 
     - name: Download ZIP archive
       run: |
@@ -46,6 +46,11 @@ jobs:
         cd source_unpacked
         zip -r "../rpm_build/SOURCES/${NAME}-${{ github.event.inputs.version }}.zip" Linux
         cd ..
+
+    - name: Copy .desktop and icon into SOURCES
+      run: |
+        cp Build/Linux/rpm/PiozaGameLauncher.desktop rpm_build/SOURCES/
+        cp Build/Linux/rpm/pioza_icon.png rpm_build/SOURCES/
 
     - name: Copy and prepare SPEC file
       run: |
