--- a/.github/workflows/build-deb.yml
+++ b/.github/workflows/build-deb.yml
@@ -21,6 +21,9 @@ jobs:
       VERSION: ${{ github.event.inputs.version }}
 
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
     - name: Install required packages
       run: sudo apt-get update && sudo apt-get install -y unzip dpkg-dev
 
